--- a/zelk.css
+++ b/zelk.css
@@ -33,9 +33,9 @@
 /*-------------DARK MODE-------------*/
 /*---------------BASIC---------------*/
 .theme-dark {
-  --accent-color: #bde6fb;
-  --background-1: #171d20;
-  --background-2: #1e2529;
+  --accent-color: #67257d;
+  --background-1: #6812c4;
+  --background-2: #6812c4;
   --background-accent: #1e2529;
   --border-color: #273034;
 }
